= 2.3.2 = * New: Internal cache and share count return function only fires if requested share count value is higher than previous stored value. This prevents bouncing share count because some networks are deliver inconstant share values from time to time. * New: Two more fields for putting content above and below share buttons grouped together with subscribe option field in tabs * Fix: PHP notice: "Undefined var" when network add-on is installed but disabled * Fix: esc_url for add_query_arg and remove_query_arg * Tweak: New recommended minimum cache time is 30min. * Tweak: Move up the Customize tab for faster editing periodical editing cusomization tasks

--- a/assets/css/mashsb-admin.css
+++ b/assets/css/mashsb-admin.css
@@ -843,3 +843,28 @@ color:#777777;
 
 /* End layout of admin table and rows
 */
+#mashtabcontainer > .mashtabs {
+    background-color: #ffffff;       
+}
+
+#mashtabcontainer ul .active {
+      background-color: #00adef;
+      color: white;
+      border-bottom-color: #0098D2;
+}
+
+#mashtabcontainer ul .active:hover {
+      background-color: #00A4E2;
+      color: white;
+      border-bottom-color: #0098D2;
+}
+
+#mashtabcontainer ul li a {
+      padding: 10px 14px 10px 14px;
+      background-color: #f3f3f3
+          
+}
+
+#mashtabcontainer .mashtab-container {
+      border: 0px solid #ececec;
+}
