--- a/assets/css/mashsb-admin.css
+++ b/assets/css/mashsb-admin.css
@@ -748,6 +748,9 @@ font-weight: bold;
 #mashsb_settingsgeneral_header .row:nth-child(3), #mashsb_settingsgeneral_header .row:nth-child(4){
     display:none;
 }
+#mashsb_settingsgeneral_header .row:nth-child(6){
+    display:none;
+}
 
 /* Layout of admin table and rows
 */
@@ -764,7 +767,7 @@ min-width: 550px;
 vertical-align: top;
 text-align: left;
 padding: 20px 10px 20px 0;
-width: 200px;
+/*width: 200px;*/
 line-height: 1.3;
 font-weight: 600;
 font-size: 15px;
@@ -1140,3 +1143,21 @@ color: #0097df;
 #mashsb_settingslicenses_header .row.th{
     min-width:250px;
 }
+
+.mashsb-notice{
+    background: #fff;
+    border-left: 4px solid #46b450;
+    -webkit-box-shadow: 0 1px 1px 0 rgba( 0, 0, 0, 0.1 );
+    box-shadow: 0 1px 1px 0 rgba( 0, 0, 0, 0.1 );
+    margin: 5px 15px 2px;
+    padding: 1px 12px;
+}
+
+#tab_container .form-table th.mashsb-status-col{
+    width: 50px;
+}
+
+#tab_container .form-table th.mashsb-network-col{
+    width: 150px;
+}
+
