* Fix: Twitter title for floating sidebar and sharebar add-on is wrong when on frontpages with multiple blogposts * Fix: Telegram button missing style in mashsb.css * Tweak: Missing update notice after succesfull settings import * Tweak: Improve Open Graph and Twitter Card settings description * New: Hide User Profile MashShare meta box with setting Meta Box Visibility in general settings

--- a/templates/mashsb.css
+++ b/templates/mashsb.css
@@ -121,7 +121,7 @@ color:#ffffff;
 .mashicon-frype .icon:before { content: '\e81c'; } /* '' */
 .mashicon-skype .icon:before { content: '\e81d'; } /* '' */
 .mashicon-share:before { content: '\e81E'; } /* '' */
-.mashicon-telegram:before { content: '\e81F'; } /* '' */
+.mashicon-telegram .icon:before { content: '\e81F'; } /* '' */
 
 
 /* Upper and lower distance share button to next elements  */
