--- a/assets/css/mashsb.css
+++ b/assets/css/mashsb.css
@@ -574,6 +574,9 @@ color:#8A8C8E;
     min-height: 90px;
     border-bottom: 1px solid #f5f5f5;
 }
+.mashsb-share-widget{
+    margin:0px;
+}
 .mashsb-excerpt{
     font-size: 12px;
 }
