--- a/assets/css/mashsb-admin.css
+++ b/assets/css/mashsb-admin.css
@@ -1193,3 +1193,8 @@ color: #0097df;
 .mashsb-about-wrap img {
     max-width: 99%;
 }
+
+.token_status{
+    line-height: 19px;
+    margin-top: 5px;
+}
