--- a/assets/css/mashsb.css
+++ b/assets/css/mashsb.css
@@ -13,7 +13,7 @@
     }
  .mashsb-buttons .secondary-shares a {
         min-width:0;
-        font-size: 16px;
+        /*font-size: 16px;*/
         display: block;
     }
   .mashsb-buttons .secondary-shares a .icon:before {
