* New: Option in social sharing options meta box to hide share buttons * New: Use blank character in share label to show pure icon buttons without share label * Fix: No button margin when plugin is updated

--- a/assets/css/mashsb-admin.css
+++ b/assets/css/mashsb-admin.css
@@ -130,6 +130,7 @@ color:#ffffff;
 .mashicon-share:before { content: '\e81E'; } /* '' */
 .mashicon-telegram .icon:before { content: '\e81f'; } /* '' */
 .mashicon-hackernews .icon:before { content: '\e820'; } /* '' */
+.mashicon-flipboard .icon:before { content: '\e821'; } /* '' */
 
 
 /* Background color of drag and drop services */
