* New: Option in social sharing options meta box to hide share buttons * New: Use blank character in share label to show pure icon buttons without share label * Fix: No button margin when plugin is updated

--- a/includes/admin/meta-box/css/style.css
+++ b/includes/admin/meta-box/css/style.css
@@ -159,7 +159,6 @@ select.error {
   border: none;
   padding: 10px 0;
   height: 45px;
-  font-style: italic;
   font-weight: lighter;
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -176,7 +175,7 @@ select.error {
     border: none;
     padding: 5px;
     height: 30px;
-    font-style: italic;
+    /*font-style: italic;*/
     font-weight: lighter;
     margin-bottom: 15px;
     text-transform: uppercase;
