--- a/assets/css/mashsb.css
+++ b/assets/css/mashsb.css
@@ -147,7 +147,7 @@ color:#ffffff;
     float:left;
     text-decoration: none;
     border:0px;
-    box-shadow: none;
+    /*box-shadow: none;*/
     text-decoration: none;
 }
 .mashsb-box .mashsb-buttons a:hover{
@@ -534,7 +534,7 @@ color:#8A8C8E;
     min-width: 0;
 }
 
-.mashsb-shadow{
+.mashsb-buttons .mashsb-shadow{
     -webkit-box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.51);
     -moz-box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.51);
     box-shadow: 1px 2px 5px 0px rgba(0,0,0,0.51);
